<resources>
    <string name="app_name">Ball Chalu</string>

    <string name="facebook_app_id">1484865978352630</string>
    <string name="fb_login_protocol_scheme">fb1484865978352630</string>

    <string name="title_activity_login">Sign in</string>
    <string name="invalid_username">Username can\'t be empty</string>
    <string name="empty_password">Password can\'t be empty</string>
    <string name="empty_confirm_password">Confirm Password can\'t be empty</string>
    <string name="invalid_password">Password must be >5 characters</string>

    <string name="invalid_first_name">Firstname can\'t be empty</string>
    <string name="invalid_last_name">Lastname can\'t be empty</string>
    <string name="empty_email">Email can\'t be empty</string>

    <string name="invalid_password_not_match">Password not matched</string>

    <string name="title_activity_navigation_">Navigation_Activity</string>

    <string name="menu_home">Home</string>

    <string name="nav_chat_room">Chat Room</string>
    <string name="nav_bc_coins_ledgers">BC-coins-ledgers</string>
    <string name="nav_bc_coins">BC-Coins</string>
    <string name="nav_how_to_play">How To Play</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_logout">Logout</string>
    <string name="bc_money">BC Money</string>
    <string name="nav_home">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forget_password">Forget Password</string>
    <string name="login_with_google">Login with Google</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="username">Username</string>
    <string name="username_emailid">Username/Email id</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="email_id">Email ID</string>
    <string name="invalid_email">Email is Invalid</string>
    <string name="email">Email</string>
    <string name="send_me_reset_password_instruction">Send Me Reset Password Instruction</string>
    <string name="even_odd">Even Odd</string>
    <string name="ending_digit">Ending Digit</string>
    <string name="session">Session</string>
    <string name="market">Market</string>
    <string name="all">All</string>
    <string name="yes">YES</string>
    <string name="even">Even</string>
    <string name="odd">Odd</string>
    <string name="ending_digit_adapter_title">Ending Digit |</string>
    <string name="all_contest">All Contest</string>
    <string name="my_contest">My Contest</string>
    <string name="dialogTitle">Logout</string>
    <string name="dialogMessage">Are you sure you want to logout?</string>
    <string name="in_play">In Play</string>
    <string name="join_now">Join Now</string>
    <string name="live">Live</string>
    <string name="upcoming">Upcoming Matches</string>
    <string name="cricket">Cricket</string>
    <string name="football">Football</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="no">No</string>
    <string name="play_now">Play Now</string>
    <string name="buy_now">Buy Now</string>
    <string name="no_connection">"No Internet Connection "</string>
    <string name="place_bet">Place Bet</string>
    <string name="clear_bet">Clear Bet</string>
    <string name="return_bet">Return |</string>
    <string name="_0">0</string>
    <string name="market_divider">Market |</string>
    <string name="rate_odd_even_type">%s(%s)</string>
    <string name="please_enter_amount">Please enter the amount</string>
    <string name="amount_should_be_greater">Amount should be grater than zero</string>
    <string name="match_winner_market">Match Winner Market</string>
    <string name="how_to_play">How To Play</string>
    <string name="entry">Entry -</string>
    <string name="total_winners">Total Winners -</string>
    <string name="credit">Credit -</string>
    <string name="spots_left">Spots Left</string>
    <string name="how_to_play_header_1">Lorem Ipsum is simply dummy text of the printing and typesetting industry?</string>
    <string name="how_to_play_desc_1">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using \'Content here, content here\', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for \'lorem ipsum\' will uncover many web sites still in their infancy.\n It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using \'Content here, content here\', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for \'lorem ipsum\' will uncover many web sites still in their infancy.</string>
    <string name="prize">Price -</string>
    <string name="runner_s">Runner - %s</string>
    <string name="market_name_s">Market Name - %s</string>
    <string name="rate_s">Rate - %s</string>
    <string name="amount_s">Amount - %s</string>
    <string name="mode_s">Mode - %s</string>
    <string name="session_s">Session - %s</string>
    <string name="run_s">Run - %s</string>
    <string name="build">Build Version %d %s</string>
    <string name="runner_empty">Runner -</string>
    <string name="declared">Declared</string>
    <string name="nav_declared_match">Declared Match</string>
    <string name="note_s">Note - %s</string>
    <string name="date_s">Date - %s</string>
    <string name="reference_s">Reference - %s</string>
    <string name="contest_s">Contest Name - %s</string>
    <string name="debit_s">Debit - %s</string>
    <string name="credit_s">Credit - %s</string>
    <string name="balance_s">Balance - %s</string>
    <string name="dialog_title">Success</string>
    <string name="dialog_desc">User buy BC Coin</string>
    <string name="build_d">Build %d</string>
    <string name="version_s">Version %s</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="d_users">%d Users</string>
    <string name="bc_coin_s">BC Coin %s</string>
    <string name="nav_theme">Theme</string>
    <string name="place_your_bet">Place your Bet</string>
    <string name="buy_bcm">Buy BCM</string>
    <string name="for_only">For Only</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="nav_change_password">Change Password</string>
    <string name="user_has_not_bets_yet">User has not bets yet…</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buy_coin_ledger">Buy-Coin Ledger</string>
    <string name="user_name">User Name</string>
    <string name="bc_coin">BC Coins</string>
    <string name="available_coin">Available Coins</string>
    <string name="user_coin_info">User Coin Info</string>
    <string name="coins">Coins</string>
    <string name="last_name">Last Name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="enter_mail_id">Enter mail-id</string>
    <string name="message_password_instruction">Sent your password instruction on your email</string>
    <string name="user_info">User Info</string>
    <string name="enter_username">Enter UserName</string>
    <string name="contest_price">Contest Prize</string>
    <string name="add_coin">Add Coin</string>
    <string name="by_join">By joining a contest you agree \n terms and conditions</string>
    <string name="add_coins">Add Coins</string>
    <string name="choose">Choose the Package</string>
    <string name="payment_option">Payment options</string>
    <string name="next">Next</string>
    <string name="total_coins">Total Coins</string>
    <string name="your_total">"Your total coins will be calculated \n on the basis of package selected "</string>


    //razorpay

    <string name="card_number_hint">xxxx-xxxx-xxxx-xxxx</string>
    <string name="valid">Valid through</string>
    <string name="card_name">Name on card</string>
    <string name="playnow">Play Now</string>
    <string name="remember">Remember this card</string>
    <string name="credit_card">Credit Card</string>
    <string name="debit_card">Debit Card</string>
    <string name="net_banking">NetBanking</string>
    <string name="wallet">Wallet</string>
    <string name="enter_name">Enter the card holder name</string>
    <string name="payment_completed">Payment Completed</string>
    <string name="payment_sucess">Your payment was successfully \n  completed \n you can join the contest</string>
    <string name="ok">OK</string>
    <string name="try_again">Try Again</string>
    <string name="validation_expirydate">Please enter expirydate</string>
    <string name="validation_cardnumber">Please enter card number</string>
    <string name="validation_cardholder">Please enter valid  expirydate</string>
    <string name="validation_cvv">"Please enter a valid cvv "</string>
    <string name="checkbox">Please check checkbox</string>
    <string name="Rs1000">\u20B9"1000"</string>
    <string name="Rs2000">\u20B9"2000"</string>
    <string name="Rs3000">\u20B9"3000"</string>
    <string name="Rs5000">\u20B9"5000"</string>
    <string name="total_coin">Total Coins</string>
    <string name="payment_failed">Your payment failed due to</string>
    <string name="enter_cvv">Enter CVV</string>
    <string name="two">200</string>
    <string name="payment_fail">Payment Failed</string>
</resources>
