<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.ccpp.shared.domain.my_bets.UserMyBet" />

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/back_solid_sub_comp_8"
            android:orientation="vertical"
            android:padding="@dimen/_2sdp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvEvenOddTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_1sdp"
                android:background="@drawable/back_solid_sub_comp_9"
                android:gravity="center"
                android:padding="@dimen/_8sdp"
                android:text="@{String.format(@string/market_name_s, model.infoModel.market.betfairMarketType.toString())}"
                android:textSize="@dimen/_12ssp"
                tools:text="Market Name" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginBottom="@dimen/_2sdp"
                android:orientation="horizontal">


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvRuns"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_1sdp"
                    android:layout_weight="1"
                    android:layout_marginEnd="@dimen/_1sdp"
                    android:background="@drawable/back_solid_sub_comp_9"
                    android:gravity="center"
                    android:padding="@dimen/_8sdp"
                    android:text="@string/runner_empty"
                    android:textSize="@dimen/_12ssp"
                    tools:text="@string/runner_s" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvRate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_1sdp"
                    android:layout_weight="1"
                    android:background="@drawable/back_solid_sub_comp_9"
                    android:gravity="center"
                    android:padding="@dimen/_8sdp"
                    android:text="@{String.format(@string/rate_s, model.odds.toString())}"
                    android:textSize="@dimen/_12ssp"
                    tools:text="@string/rate_s" />
            </LinearLayout>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_1sdp"
                android:background="@drawable/back_solid_sub_comp_9"
                android:gravity="center"
                android:padding="@dimen/_8sdp"
                android:text="@{String.format(@string/amount_s, model.stake.toString())}"
                android:textSize="@dimen/_12ssp"
                tools:text="@string/amount_s" />

        </LinearLayout>
    </FrameLayout>
</layout>