<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_package_card">

        <RelativeLayout
            android:layout_width="@dimen/_250sdp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:background="@color/color_payment_result"
            android:padding="@dimen/_30sdp">

            <LinearLayout
                android:id="@+id/ll_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <LinearLayout
                    android:id="@+id/img_fail_buble"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:gravity="center"
                    android:background="@drawable/ic_red_bubbles"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:id="@+id/ll_polygon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:background="@drawable/ic_polygon_1"
                        android:orientation="vertical" >
                    <ImageView
                        android:id="@+id/img_buble"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_icon_awesome_exclamation" />
                </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_payment_completed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_image"
                  fontPath="fonts/Roboto_Medium"
                android:gravity="center"
                android:text="@string/payment_fail"
                android:textColor="@color/color_heading_result"
                android:textSize="@dimen/_14ssp" />

            <TextView
                android:id="@+id/tv_payment_failed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                fontPath="fonts/HelveticalNueue_Medium.ttf"
                android:layout_below="@+id/tv_payment_completed"
                android:gravity="center"
                android:text="@string/payment_failed"
                android:textColor="@color/color_subtext_result"
                android:textSize="@dimen/_10ssp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_try"
                fontPath="fonts/HelveticalNueue_Medium.ttf"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_below="@+id/tv_payment_failed"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/background_round_green"
                android:gravity="center"

                android:text="@string/try_again"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_try"
                android:layout_marginTop="@dimen/_10sdp"
                  fontPath="fonts/Roboto_Medium"
                android:gravity="center"
                android:text="@string/ok"
                android:textColor="@color/midgreen"
                android:textSize="@dimen/_10ssp" />
        </RelativeLayout>
    </RelativeLayout>

</layout>