<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>
<LinearLayout
    android:id="@+id/persistent_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_20sdp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_close"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:src="@drawable/ic_close"></ImageView>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@color/text_color_grey" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_20sdp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/contest_price" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Rs 40" />

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@color/text_color_grey" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_20sdp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"

            android:text="@string/available_coin" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="20" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@color/text_color_grey" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_20sdp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/add_coin" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="20" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:singleLine="false"
        android:text="@string/by_join" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAddCoin"
        fontPath="fonts/Play-Regular.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_2sdp"
        android:layout_weight="1"
        android:background="@drawable/green_button_border"
        android:text="@string/add_coin"
        android:textAllCaps="false"
        android:textColor="@color/white" />
</LinearLayout>
</layout>